fixed link and made it legible

--- a/styles/main.css
+++ b/styles/main.css
@@ -14,3 +14,7 @@ body {
 #slogan {
 	color: red;
 }
+
+a {
+	color: yellow;
+}
